# pycftboot

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  tutorial.py
.github/workflows/: docs.yml  main.yml
_sources/: api.rst.txt  index.rst.txt
_sources/api/: sdpb.rst.txt
api/: sdpb.html
docs/source/: api.rst  conf.py  index.rst
docs/source/api/: sdpb.rst
examples/: ON_3d.py  ising_gap.py  ising_plot.py
pycftboot/: __init__.py  block_vector.py  blocks1.py  blocks2.py  bootstrap.py  cbt_common.py  cbt_seed1.py  cbt_seed2.py  chain_rule.py  common.py  compat_json.py  compat_juliboots.py  compat_scalar_blocks.py  conformal_block_table.py  constants.py  convolved_block_table.py  polynomial_vector.py  sdpb.py  sdpb_binary.py  sdpb_docker.py  serialize.py
pycftboot/sdpb/: __init__.py  async_subprocess.py  sdpb.py  sdpb_binary.py  sdpb_docker.py  sdpb_singularity.py
tests/: test_cbt.py  test_compat.py  test_import.py  test_sdp.py  test_sdpb.py  test_serializer.py
tests/check_output/: conformal_block_table.json  test_pvm2sdp
tests/check_output/test_pvm2sdp.ck/: checkpoint.json  checkpoint_1_0
tests/check_output/test_sdpb/: out.txt  x_0.txt  y.txt
