[metadata]
name = pycftboot
version = 0.0.1
author = Connor Behan, Alessandro Piazza
author_email = alessandro.piazza@sns.it
description = Interface for the conformal bootstrap
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
url = https://github.com/cbehan/pycftboot
project_urls =
    Bug Tracker = https://github.com/cbehan/pycftboot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
install_requires =
    sympy
    cython
    symengine
    docker
packages = pycftboot
